Clean up user show template. Add styles to my listings page.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -293,7 +293,7 @@ form {
 	position: fixed;
 	top: 80px;
 	background: #02E6FB;
-	left: 440px;
+	left: 10%;
 	color: #000;
 	font-weight: bold;
 	z-index: 10005;
@@ -306,7 +306,7 @@ form {
 .error-bar {
 	position: fixed;
 	top: 80px;
-	left: 440px;
+	left: 10%;
 	display: none;
 	background: #FB7600;
 	font-weight: bold;
