--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -1,3 +1,16 @@
+.convos {
+	padding: 20px;
+}
+
+.convos > p {
+	margin: 30px;
+	font-size: 20px;
+}
+
+.convos > h3 {
+	font-size: 26px;
+}
+
 .convo-list {
 	padding: 20px 40px;
 	
