--- a/app/assets/templates/header_signed_in.jst.ejs
+++ b/app/assets/templates/header_signed_in.jst.ejs
@@ -15,9 +15,10 @@
 	     <li><a href="#/my_booking_requests">
 				Your Booking Requests
 			</a></li>
-	     <li><a href="#/wishlist">
+			<!-- FEATURE NOT YET IMPLEMENTED -->
+	     <!-- <li><a href="#/wishlist">
 				Your Wishlist
-			</a></li>
+			</a></li> -->
 	     <li><a href="#/users/<%= user.id %>/edit">
 				Edit Profile
 			</a></li>
