--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -5,12 +5,12 @@
 	</div>
 </section>
 
+
 <section class="content">
 	<article class="basic-info">
-		<p><%= user.escape("locale") %> | Member since <%= user.escape("created_at") %></p>
-	</article>
-	
-	<article class="reviews">
-		Reviews will eventually go here!
+		<% var date = new Date(user.get("created_at")).toGMTString() %>
+		<% var locale = user.get("locale") ? user.escape("locale") : "No location data for this user." %>
+		<p><%= user.escape("fname") %> | Member since <%= date %></p>
+		<p><%= locale %></p>
 	</article>
 </section>
