Add minor styling to date inputs on filter form.

--- a/app/assets/stylesheets/listings_index.css.scss
+++ b/app/assets/stylesheets/listings_index.css.scss
@@ -80,6 +80,11 @@
 	margin: auto;
 }
 
+.listing-params input[type=date] {
+	color: #999;
+	border: 1px solid #000;
+}
+
 .listing-params input[type=radio] {
 	padding: 0 10px;
 	background: #008A99;
