--- a/app/assets/templates/sign_in.jst.ejs
+++ b/app/assets/templates/sign_in.jst.ejs
@@ -15,4 +15,9 @@
   <button>Sign In</button>
 </form>
 
+<section class="example-signins">
+	<button class="superman-signin"></button>
+	<button class="batman-signin"></button>
+</section>
+
 <a href="/auth/facebook" class="facebook-auth">Or sign in with Facebook!</a>
