--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
 		<footer class="group">
 			<small class="copy">&copy; 2014, Noah Zachary Gordon</small>
 			<small class="hire">
-				<a href="http://www.linkedin.com/pub/noah-gordon/42/34a/67/"></a>
+				<a href="http://noahzgordon.com/"></a>
 			</small>
 		</footer>
 	</body>
